# VLM-humor

./: .env.example  .gitignore  README.md  ROADMAP.md  pyproject.toml  requirements.txt
data/curated/: .gitkeep
data/processed/: .gitkeep
data/raw/: .gitkeep
docs/: PRODUCT_DESIGN.md  TRAINING_SPEC.md  yahoo_fantasy_api.md
prompts/: .gitkeep
src/: __init__.py
src/agent/: __init__.py
src/ingestion/: __init__.py  email_parser.py  evernote_parser.py
src/integrations/: __init__.py
